# jot

./: .env.example  .prettierignore  README.md  eslint.config.js  index.html  justfile  package.json  vite.config.ts
.github/workflows/: ci.yaml  release.yaml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  settings.rs  vault.rs
src/components/: command-menu.tsx  editor.tsx  entry-selector.tsx  search-dialog.tsx  settings-dialog.tsx  time.tsx
src/components/ui/: calendar.tsx  command.tsx
src/extensions/: search.ts
src/lib/: types.ts  typeshare.ts  utils.test.ts  utils.ts
src/providers/: entry-navigation-provider.tsx  settings-provider.tsx  vault-provider.tsx
