[package]
name = "jot"
version = "0.0.0"
description = "A developer-focused note taking app"
authors = ["Liam liam@scalzulli.com"]
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
thiserror = "2.0.12"
typeshare = "1.0.4"

[dev-dependencies]
tempdir = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
